--- a/src/views/PlaceBid/innerComponents/styles.module.scss
+++ b/src/views/PlaceBid/innerComponents/styles.module.scss
@@ -2,23 +2,35 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 
   .stepContainer {
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     width: 400px;
-    padding: 10px 20px 0px;
+    padding: 10px 20px 40px 20px;
 
     .fieldGroup {
       display: flex;
-      gap: 20px;
       justify-content: space-between;
+      gap: 20px;
+
+      @media only screen and (max-width: 320px) {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      .fieldGroup__item {
+        display: block;
+        text-align: center;
+        margin-right: 20px;
+      }
     }
     .nextButton {
       background-color: #2468fa;
       color: #fff;
       padding: 10px;
-      margin: 30px 20px 20;
-      width: 90%;
+      margin: 30px 20px 20px;
+      width: 100%;
       appearance: button;
       backface-visibility: hidden;
       border-radius: 3px;
@@ -43,34 +55,91 @@
           rgba(50, 50, 93, 0.2) 0 6px 15px 0, rgba(0, 0, 0, 0.1) 0 2px 2px 0,
           rgba(50, 151, 211, 0.3) 0 0 0 4px;
       }
+      &:disabled {
+        background-color: #edf0f7;
+        cursor: not-allowed;
+        box-shadow: unset;
+      }
     }
 
-    .journeyDetails {
+    .bidDetails {
       border-bottom: 1px solid #e9e9e9;
       padding: 40px 20px;
 
-      .journeyDetails__header {
+      .bidDetails__header {
         display: flex;
         gap: 20px;
         justify-content: space-between;
         h6 {
-          color: #80868b;
+          color: #797979;
           text-transform: uppercase;
         }
         a {
           font-weight: 500;
         }
       }
-      .journeyDetails__content {
+      .bidDetails__content {
         p {
+          font-size: 14px;
           text-align: left;
+          font-weight: 700;
+        }
+      }
+
+      .bidDetails__wrap {
+        margin-top: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        p {
+          font-size: 14px;
+          text-align: left;
+          font-weight: 700;
+        }
+
+        .bidDetails__amountSection {
+          p,
+          h6 {
+            text-align: right;
+          }
+
+          .bidDetails__amount {
+            font-size: 24px;
+            font-weight: 700;
+          }
+
+          .bidDetails__amountType {
+            color: #797979;
+          }
+        }
+      }
+    }
+
+    .mobileNumberSection {
+      text-align: left;
+      padding: 20px 20px 10px;
+      font-size: 14px;
+      color: #797979;
+
+      .mobileNumber {
+        color: #000;
+        font-weight: 700;
+        a {
           font-weight: 500;
         }
       }
     }
+
+    .resendOtpLinkWrap {
+      margin: 30px 0 0;
+      font-size: 12px;
+      font-weight: 600;
+    }
   }
 }
 
-.w-100 {
-  width: 100%;
+.breakLine {
+  border-bottom: 1px solid #e9e9e9;
+  padding: 10px;
 }
