--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,17 @@
 .header {
   display: flex;
   justify-content: flex-start;
-  padding: 10px 80px;
   height: 40px;
+
+  @media only screen and (max-width: 320px) {
+    padding: 10px 20px;
+  }
+  @media only screen and (min-width: 321px) and (max-width: 480px) {
+    padding: 10px 25px;
+  }
+  @media only screen and (min-width: 481px) {
+    padding: 10px 80px;
+  }
 
   .siteLogo {
     max-width: 100px;
