--- a/src/components/Phone/phone.module.scss
+++ b/src/components/Phone/phone.module.scss
@@ -37,5 +37,34 @@
         border-color: #2468fa;
       }
     }
+
+    .updateSection {
+      background-color: rgba(205, 225, 241, 0.527);
+      height: 50px;
+      border-radius: 0px 0px 5px 5px;
+      display: flex;
+      align-items: center;
+      padding: 0px 10px;
+      font-size: 12px;
+      width: 100%;
+
+      span {
+        display: flex;
+        align-items: center;
+        img {
+          width: 25px;
+          height: 25px;
+        }
+        margin-left: 5px;
+        color: #25d366;
+      }
+    }
+  }
+
+  .errorMessage {
+    text-align: left;
+    font-size: 12px;
+    color: red;
+    margin-left: 10px;
   }
 }
