--- a/src/components/Select/select.module.scss
+++ b/src/components/Select/select.module.scss
@@ -39,4 +39,11 @@
       appearance: none !important;
     }
   }
+
+  .errorMessage {
+    text-align: left;
+    font-size: 12px;
+    color: red;
+    margin-left: 10px;
+  }
 }
